...
    object CameraPreview {
      const val PREVIEW = "camera_preview"
    }

    object Utils {
      // PLATE SWIPE SCAFFOLD
      const val SEARCH_BAR = "searchBar"
      const val TOP_BAR = "topBar"
      const val TOP_BAR_TITLE = "topBarTitle"
      const val BACK_ARROW_ICON = "backArrowIcon"
      const val EDIT_ACCOUNT_ICON = "editAccountIcon"
      const val PLATESWIPE_SCAFFOLD = "plateSwipeScaffold"
      const val CHEF_HAT_ICON = "chefHatIcon"
...
      const val RECIPE_IMAGE_TEST_TAG = "recipeImage"
      const val RECIPE_TITLE_TEST_TAG = "recipeTitle"
      const val RECIPE_FAVORITE_ICON_TEST_TAG = "recipeFavoriteIcon"
      const val RECIPE_DOWNLOAD_ICON_TEST_TAG = "recipeDownloadIcon"
      const val RECIPE_DELETE_ICON_TEST_TAG = "recipeDeleteIcon"
      const val CONFIRMATION_POP_UP = "confirmationPopUp"
      const val CONFIRMATION_BUTTON = "confirmButton"
      const val CANCEL_BUTTON = "cancelButton"
    }

    object SignInScreen {
      const val TACO = "taco"
      const val SUSHI = "sushi"
      const val AVOCADO = "avocado"
...
      const val MAIN_BOX = "main box"
      const val COL_2 = "col 2"
      const val TITLE_COL = "title col"
    }

    object ChefImage {
      const val CHEF_IMAGE = "Chef Image"
    }

    object IngredientSearchScreen {
      const val DRAGGABLE_ITEM = "DraggableItem"
      const val SCANNER_ICON = "scannerIcon"
      const val CONFIRMATION_POPUP = "confirmationPopUp"
      const val CONFIRMATION_BUTTON = "confirmButton"
      const val CANCEL_BUTTON = "cancelButton"
    }

    object IngredientListScreen {
      const val RECIPE_NAME = "recipeName"
...
      const val RED = "red"
      const val GREEN = "green"
      const val ORANGE = "orange"
    }

    object PlateSwipeDropdown {
      const val DROPDOWN = "PlateSwipeDropdown"
      const val DROPDOWN_ITEM = "PlateSwipeDropdownItem"
      const val DROPDOWN_TITLE = "PlateSwipeDropdownTitle"
    }

    object RecipeNameScreen {
      const val LOADING_COOK_TEST_TAG = "LoadingCook"
    }
  }
...
