...
    <string name="instruction_label">Instruction</string>
    <string name="save_label">Save</string>
    <string name="add_step">Add Step</string>
    <string name="error_message_empty_instruction">Please enter an instruction</string>

    //IconDropDownMenu
    <string name="add_icon">Add Icon</string>
    <string name="dropdown_icon">DropDown Icon</string>
    <string name="fire_icon_description">Heat</string>
    <string name="salt_icon_description">Season</string>
    <string name="mortar_icon_description">Mix</string>
    <string name="axe_icon_description">Prep</string>
    <string name="chef_s_hat_icon_description">Cook</string>

    //Scanner
    <string name="ingredient_not_found">Ingredient not found</string>

    //PublishRecipeScreen
    <string name="done_text">Done !</string>
    <string name="publish_recipe_button">Publish Recipe</string>

    //RecipeIngredientScreen
    <string name="list_ingredients">List the ingredients needed for your recipe. Add as many as you need.</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="no_ingredients">No Ingredients</string>
    <string name="quantity">Quantity</string>

    //RecipeInstructionsScreen
    <string name="add_instructions">Add Instructions</string>
    <string name="describe_instructions">Describe each step of how to prepare your dish.</string>
    <string name="next">Next</string>
...
    //RecipeListScreen
    <string name="ingredient_list">Ingredients list</string>
    <string name="add">Add</string>
    <string name="close">Close</string>

    //PlateSwipeDropdownMenu
    <string name="no_item_selected">None selected</string>

    //RemoveRecipePopUp
    <string name="message_pop_up_delete_created">Are you sure that you want to delete this recipe?</string>
    <string name="message_pop_up_remove_liked">Are you sure that you want to remove this recipe from your liked recipes?</string>
    <string name="pop_up_confirm_removal_liked_recipe">Yes</string>>
    <string name="pop_up_confirm_cancel_removal_liked_recipe">No</string>
...
