...
              .background(MaterialTheme.colorScheme.background, shape = RoundedCornerShape(4.dp))
              .border(1.dp, MaterialTheme.colorScheme.onSecondary, shape = RoundedCornerShape(4.dp))
              .clickable { isDropDownExpanded.value = true }
              .padding(
                  horizontal = HORIZONTAL_PADDING_ICON_DROPDOWN.dp,
                  vertical = VERTICAL_PADDING_ICON_DROPDOWN.dp)
              .testTag("IconDropdownTrigger")) {
        Row(
            verticalAlignment = Alignment.CenterVertically,
            horizontalArrangement = Arrangement.SpaceBetween,
            modifier = Modifier.fillMaxWidth()) {
              if (selectedIcon != null) {
                Spacer(modifier = Modifier.weight(0.1f))
...
